# gitten

./: Cargo.toml  LICENSE.md  README.md  config.toml
.cargo/: config.toml
src/: app.rs  log.rs  main.rs  pull.rs  repo.rs  run_app.rs  utility.rs
src/components/: application.rs  items.rs  logs.rs  mod.rs  modes.rs  selection.rs  stateful_list.rs
src/git_operations/: mod.rs  pull.rs
