[package]
name = "gitten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
git2 = "0.14"
dirs = "4.0.0"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.15"
futures = "0.3.21"

[profile.release]
opt-level = 3
debug = true